remove unnecessary files & code 4

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-accelerate==0.20.3
 bitsandbytes==0.37.2
-datasets==2.11.0
 deepspeed==0.9.0
 einops==0.6.0
 evaluate==0.4.0
@@ -18,10 +16,18 @@ sentencepiece==0.1.98
 soundfile==0.12.1
 tensorboard==2.12.2
 tokenizers==0.13.3
-torch==1.13.1
-torchaudio==0.13.1
 torchvision==0.14.1
 tqdm==4.65.0
-transformers==4.33.1
 typer
 jiwer
+datasets==3.1.0
+omegaconf==2.3.0
+accelerate==0.26.0
+torch==2.4.1
+torchaudio==2.4.1
+transformers==4.45
+huggingface-hub==0.27.1
+bert-score==0.3.13
+seaborn==0.13.2
+nltk==3.9.1
+rouge-score==0.1.2
